--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-animate": "1.2.16",
     "angular-route": "1.2.16",
     "angular-bootstrap": "~0.11.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "highcharts": "~4.0.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
