--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "grunt-karma": "~0.8.3",
     "karma": "~0.12.21",
     "karma-jasmine": "~0.1.5",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "grunt-contrib-less": "~0.11.4",
+    "grunt-recess": "~0.7.0"
   },
   "engines": {
     "node": ">=0.10.0"
