--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "karma-jasmine": "~0.1.5",
     "coffee-script": "~1.7.1",
     "grunt-karma": "~0.8.3",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "grunt-contrib-less": "~0.11.4"
   },
   "engines": {
     "node": ">=0.10.0"
