--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "1.2.16",
     "angular-bootstrap": "~0.11.0",
     "underscore": "~1.6.0",
-    "highcharts": "~4.0.3"
+    "highcharts": "~4.0.3",
+    "angular-ui-router": "~0.2.11"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
