--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-bootstrap": "~0.11.0",
     "underscore": "~1.6.0",
     "highcharts": "~4.0.3",
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "~0.2.11",
+    "ng-grid": "~2.0.12"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
